c_cpp_includes/dtwainx.h

LONG           DLLENTRY_DEF      DTWAIN_GetRegisteredMsg(VOID_PROTOTYPE);
/* Getting acquired images after successful acquisition */
LONG           DLLENTRY_DEF      DTWAIN_GetNumAcquisitions(DTWAIN_ARRAY aAcq);
LONG           DLLENTRY_DEF      DTWAIN_GetNumAcquiredImages(DTWAIN_ARRAY aAcq, LONG nWhich );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_GetSourceAcquisitions(DTWAIN_SOURCE Source);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetResolution(DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Resolution);
DTWAIN_IDENTITY DLLENTRY_DEF DTWAIN_GetSourceID(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinter(DTWAIN_SOURCE Source, LPLONG lpPrinter, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinterStartNumber(DTWAIN_SOURCE Source, LPDWORD nStart);
 
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinterStringMode(DTWAIN_SOURCE Source, LPLONG PrinterMode, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPrinterStrings(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY ArrayString );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOrientation(DTWAIN_SOURCE Source, LPLONG lpOrient, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPaperSize(DTWAIN_SOURCE Source, LPLONG lpPaperSize, DTWAIN_BOOL bCurrent);
/* Pixel Types and Bit depths */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPixelType(DTWAIN_SOURCE Source, LPLONG PixelType,LPLONG BitDepth, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPDFTextElementFloat(DTWAIN_PDFTEXTELEMENT TextElement, LPDTWAIN_FLOAT val1, LPDTWAIN_FLOAT val2, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPDFTextElementLong(DTWAIN_PDFTEXTELEMENT TextElement, LPLONG val1, LPLONG val2, LONG Flags);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOverscan(DTWAIN_SOURCE Source, LPLONG lpOverscan, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetNoiseFilter(DTWAIN_SOURCE Source, LPLONG lpNoiseFilter);
/* ICAP_PIXELFLAVOR */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetPixelFlavor(DTWAIN_SOURCE Source, LPLONG lpPixelFlavor);
/* ICAP_ROTATION */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetRotation(DTWAIN_SOURCE Source, LPDTWAIN_FLOAT Rotation);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRCapValues(DTWAIN_OCRENGINE Engine,LONG OCRCapValue,LONG GetType,LPDTWAIN_ARRAY CapValues);
DTWAIN_OCRTEXTINFOHANDLE DLLENTRY_DEF DTWAIN_GetOCRTextInfoHandle(DTWAIN_OCRENGINE Engine, LONG nPageNo);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoLongEx(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo,LONG nWhichItem,LPLONG pInfo,LONG bufSize);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoFloatEx(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo,LONG nWhichItem,LPDTWAIN_FLOAT pInfo,LONG bufSize);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoLong(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo, LONG nCharPos, LONG nWhichItem, LPLONG pInfo);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetOCRTextInfoFloat(DTWAIN_OCRTEXTINFOHANDLE OCRTextInfo, LONG nCharPos, LONG nWhichItem, LPDTWAIN_FLOAT pInfo);
LONG        DLLENTRY_DEF DTWAIN_GetOCRLastError(DTWAIN_OCRENGINE Engine);