language_bindings/Delphi/dtwain64u.pas

  function DTWAIN_GetNameFromCapW(nCapValue:DWORD;szValue:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetNameFromCapW';
  function DTWAIN_GetNoiseFilter(Source:DTWAIN_SOURCE;lpNoiseFilter:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetNoiseFilter';
  function DTWAIN_GetNumAcquiredImages(aAcq:DTWAIN_ARRAY;nWhich:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetNumAcquiredImages';
  function DTWAIN_GetNumAcquisitions(aAcq:DTWAIN_ARRAY):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetNumAcquisitions';
  function DTWAIN_GetOCRCapValues(Engine:DTWAIN_OCRENGINE;OCRCapValue:DWORD;nGetType:DWORD;CapValues:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRCapValues';
  function DTWAIN_GetOCRLastError(Engine:DTWAIN_OCRENGINE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRLastError';
  function DTWAIN_GetOCRManufacturer(Engine:DTWAIN_OCRENGINE;szManufacturer:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRManufacturer';
  function DTWAIN_GetOCRManufacturerA(Engine:DTWAIN_OCRENGINE;szManufacturer:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRManufacturerA';
  function DTWAIN_GetOCRManufacturerW(Engine:DTWAIN_OCRENGINE;szManufacturer:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRManufacturerW';
  function DTWAIN_GetOCRProductFamily(Engine:DTWAIN_OCRENGINE;szProductFamily:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRProductFamily';
  function DTWAIN_GetOCRProductFamilyA(Engine:DTWAIN_OCRENGINE;szProductFamily:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRProductFamilyA';
  function DTWAIN_GetOCRProductFamilyW(Engine:DTWAIN_OCRENGINE;szProductFamily:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRProductFamilyW';
  function DTWAIN_GetOCRProductName(Engine:DTWAIN_OCRENGINE;szProductName:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRProductName';
  function DTWAIN_GetOCRProductNameA(Engine:DTWAIN_OCRENGINE;szProductName:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRProductNameA';
  function DTWAIN_GetOCRProductNameW(Engine:DTWAIN_OCRENGINE;szProductName:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRProductNameW';
  function DTWAIN_GetOCRText(Engine:DTWAIN_OCRENGINE;nPageNo:DWORD;Data:LPWSTR;dSize:DWORD;pActualSize:LPLONG;nFlags:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRText';
  function DTWAIN_GetOCRTextA(Engine:DTWAIN_OCRENGINE;nPageNo:DWORD;Data:PAnsiChar;dSize:DWORD;pActualSize:LPLONG;nFlags:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextA';
  function DTWAIN_GetOCRTextInfoFloat(OCRTextInfo:DTWAIN_OCRTEXTINFOHANDLE;nCharPos:DWORD;nWhichItem:DWORD;var pInfo:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextInfoFloat';
  function DTWAIN_GetOCRTextInfoFloatEx(OCRTextInfo:DTWAIN_OCRTEXTINFOHANDLE;nWhichItem:DWORD;var pInfo:DTWAIN_FLOAT;bufSize:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextInfoFloatEx';
  function DTWAIN_GetOCRTextInfoHandle(Engine:DTWAIN_OCRENGINE;nPageNo:DWORD):DTWAIN_OCRTEXTINFOHANDLE;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextInfoHandle';
  function DTWAIN_GetOCRTextInfoLong(OCRTextInfo:DTWAIN_OCRTEXTINFOHANDLE;nCharPos:DWORD;nWhichItem:DWORD;pInfo:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextInfoLong';
  function DTWAIN_GetOCRTextInfoLongEx(OCRTextInfo:DTWAIN_OCRTEXTINFOHANDLE;nWhichItem:DWORD;pInfo:LPLONG;bufSize:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextInfoLongEx';
  function DTWAIN_GetOCRTextW(Engine:DTWAIN_OCRENGINE;nPageNo:DWORD;Data:PWideChar;dSize:DWORD;pActualSize:LPLONG;nFlags:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRTextW';
  function DTWAIN_GetOCRVersionInfo(Engine:DTWAIN_OCRENGINE;buffer:LPWSTR;maxBufSize:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRVersionInfo';
  function DTWAIN_GetOCRVersionInfoA(Engine:DTWAIN_OCRENGINE;buffer:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRVersionInfoA';
  function DTWAIN_GetOCRVersionInfoW(Engine:DTWAIN_OCRENGINE;buffer:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOCRVersionInfoW';
  function DTWAIN_GetOrientation(Source:DTWAIN_SOURCE;lpOrient:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOrientation';
  function DTWAIN_GetOverscan(Source:DTWAIN_SOURCE;lpOverscan:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetOverscan';
  function DTWAIN_GetPDFTextElementFloat(TextElement:DTWAIN_PDFTEXTELEMENT;var val1:DTWAIN_FLOAT;var val2:DTWAIN_FLOAT;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFTextElementFloat';
  function DTWAIN_GetPDFTextElementLong(TextElement:DTWAIN_PDFTEXTELEMENT;val1:LPLONG;val2:LPLONG;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFTextElementLong';
  function DTWAIN_GetPDFTextElementString(TextElement:DTWAIN_PDFTEXTELEMENT;szData:LPWSTR;maxLen:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFTextElementString';
  function DTWAIN_GetPDFTextElementStringA(TextElement:DTWAIN_PDFTEXTELEMENT;szData:PAnsiChar;maxLen:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFTextElementStringA';
  function DTWAIN_GetPDFTextElementStringW(TextElement:DTWAIN_PDFTEXTELEMENT;szData:PWideChar;maxLen:DWORD;Flags:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFTextElementStringW';
  function DTWAIN_GetPDFType1FontName(FontVal:DWORD;szFont:LPWSTR;nChars:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFType1FontName';
  function DTWAIN_GetPDFType1FontNameA(FontVal:DWORD;szFont:PAnsiChar;nChars:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFType1FontNameA';
  function DTWAIN_GetPDFType1FontNameW(FontVal:DWORD;szFont:PWideChar;nChars:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPDFType1FontNameW';
  function DTWAIN_GetPaperSize(Source:DTWAIN_SOURCE;lpPaperSize:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPaperSize';
  function DTWAIN_GetPatchMaxPriorities(Source:DTWAIN_SOURCE;pMaxPriorities:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPatchMaxPriorities';
  function DTWAIN_GetPatchMaxRetries(Source:DTWAIN_SOURCE;pMaxRetries:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPatchMaxRetries';
  function DTWAIN_GetPatchPriorities(Source:DTWAIN_SOURCE;SearchPriorities:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPatchPriorities';
  function DTWAIN_GetPatchSearchMode(Source:DTWAIN_SOURCE;pSearchMode:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPatchSearchMode';
  function DTWAIN_GetPatchTimeOut(Source:DTWAIN_SOURCE;pTimeOut:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPatchTimeOut';
  function DTWAIN_GetPixelFlavor(Source:DTWAIN_SOURCE;lpPixelFlavor:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPixelFlavor';
  function DTWAIN_GetPixelType(Source:DTWAIN_SOURCE;PixelType:LPLONG;BitDepth:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPixelType';
  function DTWAIN_GetPrinter(Source:DTWAIN_SOURCE;lpPrinter:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinter';
  function DTWAIN_GetPrinterStartNumber(Source:DTWAIN_SOURCE;nStart:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinterStartNumber';
  function DTWAIN_GetPrinterStringMode(Source:DTWAIN_SOURCE;PrinterMode:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinterStringMode';
  function DTWAIN_GetPrinterStrings(Source:DTWAIN_SOURCE;ArrayString:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinterStrings';
  function DTWAIN_GetPrinterSuffixString(Source:DTWAIN_SOURCE;Suffix:LPWSTR;nMaxLen:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinterSuffixString';
  function DTWAIN_GetPrinterSuffixStringA(Source:DTWAIN_SOURCE;Suffix:PAnsiChar;nLength:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinterSuffixStringA';
  function DTWAIN_GetPrinterSuffixStringW(Source:DTWAIN_SOURCE;Suffix:PWideChar;nLength:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetPrinterSuffixStringW';
  function DTWAIN_GetRegisteredMsg:DWORD; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetRegisteredMsg';
  function DTWAIN_GetResolution(Source:DTWAIN_SOURCE;var Resolution:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetResolution';
  function DTWAIN_GetResolutionString(Source:DTWAIN_SOURCE;Resolution:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetResolutionString';
  function DTWAIN_GetResolutionStringA(Source:DTWAIN_SOURCE;Resolution:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetResolutionStringA';
  function DTWAIN_GetResolutionStringW(Source:DTWAIN_SOURCE;Resolution:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetResolutionStringW';
  function DTWAIN_GetRotation(Source:DTWAIN_SOURCE;var Rotation:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetRotation';
  function DTWAIN_GetRotationString(Source:DTWAIN_SOURCE;Rotation:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetRotationString';
  function DTWAIN_GetRotationStringA(Source:DTWAIN_SOURCE;Rotation:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetRotationStringA';
  function DTWAIN_GetRotationStringW(Source:DTWAIN_SOURCE;Rotation:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetRotationStringW';
  function DTWAIN_GetSaveFileName(Source:DTWAIN_SOURCE;fileName:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSaveFileName';
  function DTWAIN_GetSaveFileNameA(Source:DTWAIN_SOURCE;fileName:PAnsiChar;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSaveFileNameA';
  function DTWAIN_GetSaveFileNameW(Source:DTWAIN_SOURCE;fileName:PWideChar;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSaveFileNameW';
  function DTWAIN_GetSourceAcquisitions(Source:DTWAIN_SOURCE):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceAcquisitions';
  function DTWAIN_GetSourceID(Source:DTWAIN_SOURCE):TWAIN_IDENTITY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceID';
  function DTWAIN_GetSourceManufacturer(Source:DTWAIN_SOURCE;szProduct:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceManufacturer';
  function DTWAIN_GetSourceManufacturerA(Source:DTWAIN_SOURCE;szProduct:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceManufacturerA';
  function DTWAIN_GetSourceManufacturerW(Source:DTWAIN_SOURCE;szProduct:PWideChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceManufacturerW';
  function DTWAIN_GetSourceProductFamily(Source:DTWAIN_SOURCE;szProduct:LPWSTR;nMaxLen:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceProductFamily';
  function DTWAIN_GetSourceProductFamilyA(Source:DTWAIN_SOURCE;szProduct:PAnsiChar;nLength:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetSourceProductFamilyA';
